# cp2077-red-data

./: CHANGELOG.md  CMakeLists.txt  README.md  bundle.mjs  install.mjs  red.config.json
examples/cet/: init.lua
examples/redscript/: AwesomeSystem.reds
include/: RedData.hpp
include/Json/: Json.hpp  JsonArray.hpp  JsonObject.hpp  JsonVariant.hpp
include/src/: Json.hpp  JsonObject.hpp  JsonVariant.hpp
scripts/RedData/Json/: Json.reds  JsonArray.reds  JsonObject.reds  JsonVariant.reds
scripts/RedData/Test/: JsonArrayTest.reds  JsonBaseTest.reds  JsonObjectTest.reds  JsonTest.reds  Main.reds  RedDataTest.reds
scripts/RedData/Utils/: UUID.reds
src/: Config.h.in  main.cpp  pch.h
src/json/: FromJson.cpp  FromJson.h  Json.cpp  Json.h  JsonArray.cpp  JsonArray.h  JsonBool.cpp  JsonBool.h  JsonDouble.cpp  JsonDouble.h  JsonFactory.h  JsonInt64.cpp  JsonInt64.h  JsonNull.cpp  JsonNull.h  JsonNumber.cpp  JsonNumber.h  JsonObject.cpp  JsonObject.h  JsonString.cpp  JsonString.h  JsonType.h  JsonUint64.cpp  JsonUint64.h  JsonVariant.cpp  JsonVariant.h  ToJson.cpp  ToJson.h
src/utils/: UUID.cpp  UUID.h
